# rtw

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: _weekendrt.hpp  camera.hpp  color.hpp  helper.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  ray.hpp  sphere.hpp
src/: camera.cpp  color.cpp  helper.cpp  hittable_list.cpp  interval.cpp  main.cpp  material.cpp  ray.cpp  sphere.cpp
